# 3D_Project

./: CMakeLists.txt  PLAN.md  README.md  main.cpp
inc/: Framebuffer.hpp  Matrix.hpp  Renderer.hpp  Vec2.hpp  Vec3.hpp
src/: Framebuffer.cpp  Renderer.cpp
